fix centering for social icons; make photos full-width on mobile; add top margin to h1 on mobile

--- a/src/index.less
+++ b/src/index.less
@@ -112,13 +112,10 @@ body {
 
     .social {
         clear: both;
+        width: 100%;
 
         margin-top: 50px;
-        margin-left: auto;
-        margin-right: auto;
         text-align: center;
-
-        width: 350px;
 
         a {
             color: @parchment-dark;
@@ -156,7 +153,7 @@ body {
 
 @media only screen and (max-device-width: 850px) and (orientation: portrait) {
     #page {
-        font-size: 22px;
+        font-size: 20px;
         line-height: 24px;
 
         #header #logo {
@@ -170,9 +167,15 @@ body {
         h1, h2 {
             line-height: unset;
         }
+        h1 {
+            margin-top: 16px;
+        }
 
         > img {
-            width: 60%;
+            width: 90%;
+            shape-outside: unset;
+            margin: 0!important;
+            padding: 30px 10px;
         }
     }
 
